# RayUI

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  ROADMAP.md
.github/workflows/: docs.yml
examples/: AllWidgets.cpp  CMakeLists.txt  run.sh
examples/resources/locales/: template.pot
examples/resources/locales/en/LC_MESSAGES/: RayUI.mo  RayUI.po
examples/resources/locales/pl/LC_MESSAGES/: RayUI.mo  RayUI.po
examples/src/: AllWidgets.cpp  Native.cpp
include/: Api.hpp  Conversions.hpp  RayUI.hpp  Utils.hpp
include/Core/: Api.hpp  Conversions.hpp  Icons.hpp  Native.hpp  RApplication.hpp  RWidget.hpp  Themes.hpp  Translations.hpp  Utils.hpp
include/RCore/: Api.hpp  Conversions.hpp  Icons.hpp  Native.hpp  RApplication.hpp  RContainer.hpp  RWidget.hpp  Themes.hpp  Translations.hpp  Utils.hpp
include/RWidgets/: RBar.hpp  RButton.hpp  RCheckbox.hpp  RGridLayout.hpp  RHBoxLayout.hpp  RIconButton.hpp  RImage.hpp  RLabel.hpp  RLabelButton.hpp  RLayout.hpp  RLinkLabel.hpp  ROkCancelWindow.hpp  RPane.hpp  RPaneRounded.hpp  RPopupPane.hpp  RPopupWindow.hpp  RProgressBar.hpp  RScrollArea.hpp  RSlider.hpp  RTextbox.hpp  RTextboxDouble.hpp  RTextboxInt.hpp  RVBoxLayout.hpp  RWindow.hpp
include/RWidgets/Buttons/: RButton.hpp  RIconButton.hpp  RLabelButton.hpp
include/RWidgets/Checkboxes/: RCheckbox.hpp
include/RWidgets/Images/: RImage.hpp
include/RWidgets/Labels/: RLabel.hpp  RLinkLabel.hpp
include/RWidgets/Layouts/: RGridLayout.hpp  RHBoxLayout.hpp  RLayout.hpp  RVBoxLayout.hpp
include/RWidgets/Panes/: RPane.hpp  RPaneRounded.hpp
include/RWidgets/ProgressBars/: RProgressBar.hpp
include/RWidgets/ScrollAreas/: RScrollArea.hpp
include/RWidgets/Separators/: RBar.hpp
include/RWidgets/Sliders/: RSlider.hpp
include/RWidgets/Textboxes/: RTextbox.hpp  RTextboxDouble.hpp  RTextboxInt.hpp
include/RWidgets/Windows/: ROkCancelWindow.hpp  RPopupPane.hpp  RPopupWindow.hpp  RWindow.hpp
include/Widgets/Buttons/: RButton.hpp  RIconButton.hpp  RLabelButton.hpp
include/Widgets/Checkboxes/: RCheckbox.hpp
include/Widgets/Containers/Layouts/: RHBoxLayout.hpp  RLayout.hpp  RVBoxLayout.hpp
include/Widgets/Containers/Panes/: RPane.hpp  RPaneRounded.hpp
include/Widgets/Containers/Windows/: RWindow.hpp
include/Widgets/Labels/: RLabel.hpp  RLinkLabel.hpp
include/Widgets/Layouts/: RGridLayout.hpp  RHBoxLayout.hpp  RLayout.hpp  RVBoxLayout.hpp
include/Widgets/Panes/: RPane.hpp  RPaneRounded.hpp
include/Widgets/ProgressBars/: RProgressBar.hpp
include/Widgets/Separators/: RBar.hpp
include/Widgets/Sliders/: RSlider.hpp
include/Widgets/Textboxes/: RTextbox.hpp  RTextboxDouble.hpp  RTextboxInt.hpp
include/Widgets/Windows/: ROkCancelWindow.hpp  RPopupWindow.hpp  RWindow.hpp
src/: Api.cpp  Conversions.cpp  RayUI.cpp  Utils.cpp
src/Core/: Api.cpp  Conversions.cpp  Icons.cpp  Native.cpp  RApplication.cpp  RWidget.cpp  Themes.cpp  Translations.cpp  Utils.cpp
src/RCore/: Api.cpp  Conversions.cpp  Icons.cpp  Native.cpp  RApplication.cpp  RContainer.cpp  RWidget.cpp  Themes.cpp  Translations.cpp  Utils.cpp
src/RWidgets/: RBar.cpp  RButton.cpp  RCheckbox.cpp  RGridLayout.cpp  RHBoxLayout.cpp  RIconButton.cpp  RImage.cpp  RLabel.cpp  RLabelButton.cpp  RLayout.cpp  RLinkLabel.cpp  RPane.cpp  RPaneRounded.cpp  RPopupPane.cpp  RPopupWindow.cpp  RProgressBar.cpp  RScrollArea.cpp  RSlider.cpp  RTextbox.cpp  RTextboxDouble.cpp  RTextboxInt.cpp  RVBoxLayout.cpp  RWindow.cpp
src/RWidgets/Buttons/: RButton.cpp  RIconButton.cpp  RLabelButton.cpp
src/RWidgets/Checkboxes/: RCheckbox.cpp
src/RWidgets/Images/: RImage.cpp
src/RWidgets/Labels/: RLabel.cpp  RLinkLabel.cpp
src/RWidgets/Layouts/: RGridLayout.cpp  RHBoxLayout.cpp  RLayout.cpp  RVBoxLayout.cpp
src/RWidgets/Panes/: RPane.cpp  RPaneRounded.cpp
src/RWidgets/ProgressBars/: RProgressBar.cpp
src/RWidgets/ScrollAreas/: RScrollArea.cpp
src/RWidgets/Separators/: RBar.cpp
src/RWidgets/Sliders/: RSlider.cpp
src/RWidgets/Textboxes/: RTextbox.cpp  RTextboxDouble.cpp  RTextboxInt.cpp
src/RWidgets/Windows/: RPopupPane.cpp  RPopupWindow.cpp  RWindow.cpp
src/Widgets/Buttons/: RButton.cpp  RIconButton.cpp  RLabelButton.cpp
src/Widgets/Checkboxes/: RCheckbox.cpp
src/Widgets/Containers/Layouts/: RHBoxLayout.cpp  RLayout.cpp  RVBoxLayout.cpp
src/Widgets/Containers/Panes/: RPane.cpp  RPaneRounded.cpp
src/Widgets/Containers/Windows/: RWindow.cpp
src/Widgets/Labels/: RLabel.cpp  RLinkLabel.cpp
src/Widgets/Layouts/: RGridLayout.cpp  RHBoxLayout.cpp  RLayout.cpp  RVBoxLayout.cpp
src/Widgets/Panes/: RPane.cpp  RPaneRounded.cpp
src/Widgets/ProgressBars/: RProgressBar.cpp
src/Widgets/Separators/: RBar.cpp
src/Widgets/Sliders/: RSlider.cpp
src/Widgets/Textboxes/: RTextbox.cpp  RTextboxDouble.cpp  RTextboxInt.cpp
src/Widgets/Windows/: RPopupWindow.cpp  RWindow.cpp
